<resources>
    <string name="app_name">FerrePro Digital</string>
    <string name="title_activity_credit">CreditActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="welcome_message">FerrePro Digital</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="buttonLogin">Entrar</string>
    <string name="Checkout">Finalizar Compra</string>
    <string name="buttonRegister">Registrar</string>
    <string name="registerTitle">Registro de Usuario</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_email">Email</string>
    <string name="lista_de_productos">Lista de Productos</string>
    <string name="productos">Productos</string>
    <string name="categorias">Categorías</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="contactar">Contactar</string>
    <string name="categoria">Categoría</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="carrito_de_compras">Carrito de Compras</string>
    <string name="precio_del_producto">\$%.2f</string>
    <string name="agregar_al_carrito">Agregar al carrito</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="imagen_de_la_categoria">Imagen de la categoría</string>
    <string name="ingrese_su_direccion">Ingrese su dirección</string>
    <string name="confirmar_compra">Confirmar compra</string>
    <string name="total_a_pagar">Total a pagar: %.2f€</string>
    <string name="descripcion_imagen_producto">Descripcion del producto</string>
    <string name="cerrar_sesion_desc">Cerrar sesión</string>
    <string name="title_activity_product_list">Productos</string>
    <string name="title_activity_product_detail">Detalles productos</string>
    <string name="title_activity_checkout">Pago</string>
    <string name="mensaje_version">"%1$s, estás usando la versión %2$d de la app."</string>
    <string name="descripcion_producto">Descripción del producto</string>
    <string name="descripcion_del_producto">Descripción del producto</string>
    <string name="aumentar">+</string>
    <string name="diminuir">-</string>
    <string name="cantidad">1</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="ir_al_pago">Ir al pago</string>
    <string name="volver">Volver</string>
    <string name="siguenos_en_redes">Síguenos en redes sociales</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="tiktok">TikTok</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="home">Inicio</string>
    <string name="carrito">Carrito</string>
    <string name="lista_de_productos2">Lista de productos</string>

</resources>