<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/carrito_de_compras"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/contactar"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit"
        android:title="@string/cerrar_sesion"
        app:showAsAction="always"/>
</menu>
