<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Botón de retroceso -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/volver"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        app:tint="@color/celeste" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Logo de la App -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logo"
            android:contentDescription="@null"/>

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerTitle"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:gravity="center"/>

        <!-- Campos de entrada -->
        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:hint="@string/hint_user"
            android:inputType="text"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <!-- Botón de Registro -->
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="20dp"
            android:textSize="30sp"
            android:text="@string/buttonRegister" />
    </LinearLayout>
</LinearLayout>
