<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@null"/>

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints="username"
        android:hint="@string/hint_user"
        android:inputType="text"
        android:padding="8dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:autofillHints="password"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="8dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/buttonLogin"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/buttonRegister"
        android:textSize="30sp"/>

</LinearLayout>
