<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/celeste"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnCart"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/carrito_de_compras"
            android:src="@drawable/ic_shopping_cart" />

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/buscar"
            android:src="@drawable/ic_search" />

        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/perfil"
            android:src="@drawable/ic_person" />

        <ImageButton
            android:id="@+id/btnLogout"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cerrar_sesion"
            android:src="@drawable/ic_exit" />
    </LinearLayout>

</androidx.appcompat.widget.Toolbar> 