<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/imagen_del_producto"
        android:src="@drawable/ic_launcher_foreground" /> <!-- Imagen de respaldo -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/nombre_del_producto" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/precio_del_producto"/>

        <LinearLayout
            android:id="@+id/quantityControls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btnDecrease"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/diminuir"
                android:textSize="16sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/productQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="16sp"
                android:layout_marginHorizontal="16dp"/>

            <Button
                android:id="@+id/btnIncrease"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/aumentar"
                android:textSize="16sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
