<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <!-- Barra de herramientas (Toolbar) -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/celeste"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Detalle del Producto" />

    <!-- Agregar espacio para mantener el contenido en el centro -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Nombre del producto -->
        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_producto"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <!-- Precio del producto -->
        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio_del_producto"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>

        <!-- Imagen del producto con contentDescription -->
        <ImageView
            android:id="@+id/productImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/descripcion_imagen_producto"/>

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/descripcion_del_producto"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            android:gravity="start"
            android:layout_marginTop="16dp" />

        <!-- Botón para agregar al carrito -->
        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar_al_carrito"
            android:layout_marginTop="16dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <!-- Agregar otro espacio para mantener el contenido en el centro -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
