<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingHorizontal="16dp">

    <!-- Barra de herramientas (Toolbar) -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/celeste"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Contactar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:textSize="18sp"/>

        <!-- Botón de WhatsApp -->
        <ImageButton
            android:id="@+id/buttonWhatsapp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/whatsapp"
            android:src="@drawable/whatsapp"
            android:scaleType="fitCenter"
            android:padding="16dp"
            android:layout_marginBottom="16dp"/>

        <!-- Botón de Email -->
        <ImageButton
            android:id="@+id/buttonContactar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/contactar"
            android:src="@drawable/ic_email_large"
            android:scaleType="fitCenter"
            android:padding="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguenos_en_redes"
            android:textSize="20sp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnFacebook"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/facebook"
                android:scaleType="fitCenter"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/facebook"/>

            <ImageButton
                android:id="@+id/btnInstagram"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/instagram"
                android:scaleType="fitCenter"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/instagram"/>

            <ImageButton
                android:id="@+id/btnTiktok"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/tiktok"
                android:scaleType="fitCenter"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/tiktok"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
